--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,16 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
+# environment variables
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# firebase
-firebase-debug.log
-firestore-debug.log
+# genkit
+.genkit/*
+
+# firebase (removed for GitHub Pages)
+# firebase-debug.log
+# firestore-debug.log
